--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,3 +4,5 @@ main.cpp
 
 add_executable(app ${SOURCES})
 set_project_warnings(app)
+
+target_link_libraries(app PRIVATE CONAN_PKG::fmt CONAN_PKG::spdlog)
