--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,3 +6,5 @@ add_executable(app ${SOURCES})
 set_project_warnings(app)
 
 target_link_libraries(app PRIVATE CONAN_PKG::fmt CONAN_PKG::spdlog)
+
+add_subdirectory(tests)
